# cpp-native

./: .gitattributes  CMakeLists.txt  LICENSE
include/fcrisan/native/: code_page.hpp  error.hpp  file.hpp  filebuf.hpp  ostream_extractors.hpp  text.hpp  text_writer.hpp
src/: error.cpp  file.cpp  filebuf.cpp  ostream_extractors.cpp  text.cpp  text_writer.cpp
src/linux/: file.cpp
test/: echo.cpp  error.cpp  file.cpp  test.cpp  test_cases.inline
